# ASRRAL-FOX

./: .gitattributes  .gitignore  .gitmodules  docker-compose.yml
.husky/: pre-commit
alife-service/: .gitignore
alife-service/docs/: agent-browser-web-research.md  browser-global-task-plan.md  browser-live-validation-2026-06-23.md  qchat-capability-matrix.md  qchat-high-risk-audit.md  qq-live-validation-boundaries.md
alife-service/tools/: start-alife-napcat-live.ps1  upload-alife-service-via-foxd.ps1
astralfox-rigging/astralfox-rigging/: .env.example  .gitignore  Dockerfile  (+8 more)
devlog/: ceiling-floor-plan.md  demo-checklist.md  improvement-plan-v2.md
docs/: 2026-06-29-alife-webbridge-protocol-status.md  2026-06-29-webbridge-console-v1-snapshot.md  alife-submodule-upload-rules.md  frontend-uiux-audit.md  project-status-2026-06-28.md  webbridge-alife-local-integration.md
新建文件夹/: Build-Standalone.bat  CreateDesktopShortcuts.ps1  Start-AstralFox.bat
桌宠demo/新建文件夹/astralfox-rigging/: .env.example  docker-compose.yml  pyproject.toml
桌宠demo/新建文件夹/astralfox-rigging/api/: dependencies.py  ws_server.py
桌宠demo/新建文件夹/astralfox-rigging/api/routes/: deploy_route.py  export_route.py  health.py  metrics.py  rig.py  upload.py
桌宠demo/新建文件夹/astralfox-rigging/core/: config.py  deploy.py  export.py  inference.py  separation.py
桌宠demo/新建文件夹/astralfox-rigging/scripts/: download_models.sh
桌宠demo/新建文件夹/astralfox-rigging/storage/: local.py
桌宠demo/新建文件夹/astralfox-rigging/tests/: conftest.py  test_deploy.py  test_health.py  test_inference.py  test_pipeline.py  test_separate.py
(+1472 files in other folders)
