[project]
name = "astralfox-rigging"
version = "0.1.0"
description = "AI Live2D rigging pipeline — SAM2 segmentation + auto-skeleton + Cubism export"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "onnxruntime-directml>=1.18.0",
    "rembg>=2.0.0",
    "scipy>=1.13.0",
    "scikit-image>=0.23.0",
    "shapely>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "core*", "models*", "storage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300
